# cpp-dict-pack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: BuildType.cmake  ExtraDist.cmake.in  commonparser.cmake  dictdownload.cmake  dictfunc.cmake  dictpack.cmake
docs/: CifCheckDocumentation.md
scripts/: DictConfig.py  WWPDBInstallSvn.csh  WWWProdInstall.csh  gendict.py  getdictinfo.py  getdictversion.py
